Fix hang in exiting konsole with Ctrl+D with QInputMethodQuery

Add missing incrementation in for loop in decodeLine()

Thanks to Takahiro Hashimoto kenya888 gmail com for research, bug and
fix.

BUG: 345294
REIVEW: 123143